<resources>
    <string name="app_name">Historias Interactivas</string>
    <string name="facebook_app_id">326980148167119</string>

    <!--- Varios -->
    <string name="cargando">Cargando...</string>
    <string name="cerrar">Cerrar</string>
    <string name="reiniciar">Reiniciar historia</string>
    <string name="reiniciar_dialogo">¿Desea reiniciar la historia? Perderá todo el progreso realizado</string>
    <string name="ejemplo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.#Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. #Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>

    <!--- Errores -->
    <string name="error_conexion">Se ha producido un error en la conexión</string>

    <!--- Spash -->
    <string name="realizado_por">Aplicación realizada por \nJuan Carlos Serrano</string>

    <!--- Carousel -->
    <string name="empezar_juego">Empezar</string>
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="bienvenido2">Empieza a descubrir increibles historias por toda la ciudad mientras la descubres</string>
    <string name="ubicacion">Ubicación requerida</string>
    <string name="ubicacion2">Asegúrate de asignar los permisos de posicionamiento y activarlos para poder ubicarte</string>
    <string name="camara">Camara requerida</string>
    <string name="camara2">Asegúrate de asignar los permisos para poder utilizar la cámara</string>

    <!--- Main Activity -->
    <string name="cancel_login">Login cancelado</string>
    <string name="error_login">Error en el login</string>
    <string name="ok_login">Login correcto</string>
    <string name="acceso">Acceso</string>
    <string name="nueva_cuenta">Nueva cuenta</string>
    <string name="accede_a">¡Accede a una cuenta para buscar historias!</string>
    <string name="pass_olvidada">¿Has olvidado la contraseña?</string>

    <!--- Registro -->
    <string name="usuario">Usuario</string>
    <string name="email">Email</string>
    <string name="pass">Contraseña</string>
    <string name="registro">Registro</string>
    <string name="rellenar">Por favor, rellene todos los campos</string>
    <string name="crea_cuenta">¡Crea una cuenta antes de comenzar a descubrir historias!</string>

    <!--- Cambiar contraseña -->
    <string name="cambiar_pass">Cambiar contraseña</string>
    <string name="confirmar2">Confirmar</string>
    <string name="texto_cambiar_pass">Introduce tu correo electrónico y se enviará una soliciud de cambio de su contraseña.</string>
    <string name="mail_invalid">El email introducido no es válido</string>
    <string name="mail_enviado">Se le ha enviado un correo electrónico, esa acción puede tardar unos minutos.</string>

    <!--- Historia -->
    <string name="empezar">Empezar historia</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--- Navigation Drawer -->
    <string name="mapa">Mapa</string>
    <string name="perfil">Perfil</string>
    <string name="misiones">Misiones</string>
    <string name="gestion">Gestion</string>
    <string name="ajustes">Ajustes</string>
    <string name="ayuda">Términos y condiciones</string>
    <string name="cerrar_sesion">Cerrar sesión</string>

    <!--- Ajustes -->
    <string name="eliminar_cambios">¿Desea eliminar los cambios?</string>
    <string name="confirmar">Confirmar</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="plano">Ejecutar en segundo plano</string>
    <string name="idioma">Idioma</string>
    <string name="brujula">Brújula</string>
    <string name="btn_centrar">Botón de centrar</string>
    <string name="btn_zoom">Botón de zoom</string>
    <string name="estilo">Estilo del mapa</string>
    <string-array name="idiomas_array">
        <item>Español</item>
        <item>Inglés</item>
    </string-array>
    <string-array name="estilos_array">
        <item>Estándar</item>
        <item>Oscuro</item>
        <item>Plateado</item>
        <item>Aubergine</item>
        <item>Night</item>
        <item>Retro</item>
        <item>Satélite</item>
    </string-array>

    <!--- Dialogo presentacion -->
    <string name="detectar">Detectar</string>

    <!--- Dialogo escanear QR -->
    <string name="busca">Busca el Código QR de la zona</string>
    <string name="busca2">Busca el Código QR de la misión</string>

    <!--- Dialogo felicitacion ubicacion -->
    <string name="felicitar_ubicacion">¡Felicidades!, estás en la ubicación correcta.\nSuerte con la prueba</string>
    <string name="comenzar_prueba">Comenzar prueba</string>

    <!--- Dialogo pregunta -->
    <string name="continuar">Continuar</string>

    <!--- Perfil -->
    <string name="modificar_pass">Modificar contraseña</string>
    <string name="pass_actu">Contraseña actual</string>
    <string name="nueva_pass">Nueva contraseña</string>
    <string name="repetir_pass">Repetir contraseña</string>
    <string name="eliminar_cuenta">Eliminar cuenta</string>
    <string name="seguro_eliminar">¿Está seguro que desea eliminar la cuenta y todos los datos?</string>
    <string name="no_coinciden">Las contraseñas no coinciden</string>
    <string name="pass_cambiada">La contraseña se ha cambiado correctamente</string>

    <!--- Fragment lista misiones -->
    <string name="compleado">Realización:</string>
    <string name="volver">Volver</string>

    <!--- Final del juego -->
    <string name="final1">Felicidades por completar la historia </string>
    <string name="final2">. Esperamos que haya disfrutado del relato.\nRecuerda que las historias interactivas pueden tener múltiples alternativas. ¡Pruébalas todas!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
