<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mapa"
            android:icon="@drawable/map_legend"
            android:title="@string/mapa" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/account"
            android:title="@string/perfil" />
        <item
            android:id="@+id/nav_misiones"
            android:icon="@drawable/misiones"
            android:title="@string/misiones" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ajustes"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/ajustes" />
        <item
            android:id="@+id/nav_ayuda"
            android:icon="@drawable/help_circle"
            android:title="@string/ayuda" />
        <item
            android:id="@+id/nav_cerrar_sesión"
            android:icon="@drawable/logout"
            android:title="@string/cerrar_sesion" />
    </group>


</menu>

