<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * Created by Juan Carlos Serrano Pérez on 18/03/19 12:48
  ~  * Any question send an email to jcsp0003@red.ujaen.es
  ~  * Copyright (c) 2019 . All rights reserved.
  ~  * Last modified 18/03/19 12:47
  ~  */
  -->

<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AjustesFragment">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="55dp"
        android:text="@string/estilo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="55dp"
        android:text="@string/btn_zoom" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="55dp"
        android:text="@string/btn_centrar" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="55dp"
        android:text="@string/brujula" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView7"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="55dp"
        android:text="@string/idioma" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_ajuses_cancelar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="55dp"
        android:text="@string/plano" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_ajuses_guardar"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="55dp"
        android:layout_toEndOf="@+id/textView7" />

    <Button
        android:id="@+id/btn_ajuses_cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="40dp"
        android:text="@string/cancelar" />

    <Button
        android:id="@+id/btn_ajuses_guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="40dp"
        android:text="@string/guardar" />

    <Spinner
        android:id="@+id/spinner_idioma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView7"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="55dp"
        android:layout_toEndOf="@+id/textView6" />

</RelativeLayout>