<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * Created by Juan Carlos Serrano Pérez on 18/03/19 9:16
  ~  * Any question send an email to jcsp0003@red.ujaen.es
  ~  * Copyright (c) 2019 . All rights reserved.
  ~  * Last modified 18/03/19 5:04
  ~  */
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Actividades.RegistroActivity">

    <TextView
        android:id="@+id/creacuentatext"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_above="@+id/registroimage"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/crea_cuenta"
        android:textSize="17dp" />

    <ImageButton
        android:id="@+id/registroimage"
        android:layout_width="123dp"
        android:layout_height="120dp"
        android:layout_above="@+id/registrousuario"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/registrousuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/default_profile" />

    <EditText
        android:id="@+id/registrousuario"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/registroemail"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/registroemail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/registroemail"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/registropass"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/registropass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/registropass"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/botonregistrar"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/botonregistrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/botonregistrar"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:text="@string/registro"
        android:layout_centerInParent="true"/>

</RelativeLayout>