<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * Created by Juan Carlos Serrano Pérez on 18/03/19 9:15
  ~  * Any question send an email to jcsp0003@red.ujaen.es
  ~  * Copyright (c) 2019 . All rights reserved.
  ~  * Last modified 18/03/19 5:07
  ~  */
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Actividades.CambioPasswordActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="173dp"
        android:layout_height="139dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="51dp"
        android:layout_centerInParent="true"
        app:srcCompat="@drawable/forgot_password" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_marginTop="26dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:text="@string/texto_cambiar_pass"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/cambio_pass_editText"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerVertical="true"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:hint="@string/email"
        android:layout_centerInParent="true"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btn_cambio_pass"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_below="@+id/cambio_pass_editText"
        android:layout_centerVertical="true"
        android:layout_marginTop="40dp"
        android:layout_centerInParent="true"
        android:text="@string/cambiar_pass" />
</RelativeLayout>